contrast color correction push

--- a/portfolio_site/styles/site_plan.css
+++ b/portfolio_site/styles/site_plan.css
@@ -6,9 +6,9 @@ Fonts are separated by a | */
 :root {
   /* change the values below to your colors from your palette */
   --primary-color: #322736   ;
-  --secondary-color: #9E4CA9 ;
+  --secondary-color: #B481BB ;
   --accent1-color: #211924;
-  --accent2-color: #B888BF;
+  --accent2-color: #9E4CA9;
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Slackside One", sans-serif;
@@ -17,11 +17,11 @@ Fonts are separated by a | */
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #322736;  /* headlines on a white background */ 
   --headline-color-on-color: #B888BF; /* headlines on a colored background */ 
-  --paragraph-color-on-white: #211924; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: #9E4CA9; /* paragraph text on a colored background */ 
+  --paragraph-color-on-white: #1f1822; /* paragraph text on a white background */ 
+  --paragraph-color-on-color: #B481BB; /* paragraph text on a colored background */ 
   --paragraph-background-color: #211924 ;
   --nav-link-color: #776080;
-  --nav-background-color: white;
+  --nav-background-color: #d572e2;
   --nav-hover-link-color: #9E4CA9;
   --nav-hover-background-color: #161118;
 }
